# spidur

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
spidur/: core.py  factory.py  runner.py
tests/: test_lib.py
