[tool.poetry]
name = "spidur"
version = "0.2.0"
description = "🕷️ A lightweight, generic parallel runner for custom scrapers"
authors = ["ra0x3 <spam.rashad@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ra0x3/spidur"
repository = "https://github.com/ra0x3/spidur"
keywords = ["scraping", "parallel", "async", "framework", "runner"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.poetry.scripts]
spidur = "spidur.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
